# pyevosim

./: .gitignore  Pipfile  README.md  requirements.txt
evolib/: Cargo.toml  pyproject.toml
evolib/src/: lib.rs
evolib/src/forest/: mod.rs
evolib/src/noise/: mod.rs
evolib/src/quadtree/: mod.rs
evolib/src/swarm/: mod.rs
old/: README.md
old/src/: constants.py  game.py  main.py  test.py
old/src/creatures/: __init__.py
old/src/quads/: qtree.py
old/src/sprites/: __init__.py
old/src/swarm/: __init__.py
old/src/terrian/: chunk.py
old/src/test/: boxy.py  creature.py  old_state.py  quad.py  seeker.py  swarm_old.py
old/src/weather/: __init__.py
playground/: edge_detection.py  forest.ipynb  gui.ipynb  gui.py  l_system.ipynb  polygon.ipynb  py_forest.ipynb  pymunk.ipynb  ru_forest.ipynb  shader_1.frag  space_colonization.ipynb  swarm.ipynb  terrian.ipynb
playground/ursina_test1/: main.py  plant.py  player.py  swarm.py  test_block.py
src/: camera.py  constants.py  game.py  main.py  simple_game.py  test.py
src/camera/: __init__.py
src/gl/: __init__.py
src/grid/: __init__.py
src/nn/: __init__.py  brain.py
src/noise/: perlin.py  wave.py
src/plant/: __init__.py  network.py
src/player/: __init__.py
src/quads/: __init__.py
src/sprites/: __init__.py  spritesheet.py
src/spritesheet/: __init__.py  image.py  spritesheet.py
src/swarm/: __init__.py  flock.py  swarm.py  util.py
src/terrian/: __init__.py  chunk.py  generator.py
src/textures/: __init__.py
src/tiles/: tile.py
src/util/: kdtree.py  profile.py
(+2 files in other folders)
