[package]
name = "evolib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "evolib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
noise = "0.8.2"
nalgebra = "0.31.4"
rand = "0.8.5"
rayon = "1.6.1"